style.css
body {
  overflow:scroll;
  background: #003876;
  overflow: hidden;
  color: white;
  text-align: center;
  overflow-y: auto; /* Enable vertical scrolling */
}

h1 {
  font-family: 'Times New Roman';
}

h2 {
  font-family: 'Arial';
  font-size: medium;
  text-align: left;
}

h3 {
  font-family: sans-serif;
  font-size: x-large;
  text-align: left;
}

h4 {
  font-family: 'Times New Roman';
  font-size:xx-large;
  color: red;
}

h5 {
  font-family: 'Arial';
  font-size: medium;
  text-align: center;
}

header {
  border-radius: 10px;
  background-color: #002e62;
  margin: 13px;
  padding: 10px;
}

.tab-buttons {
  color: white;
  text-decoration: none;
  font-size: 30px;
  padding: 5px;
  border-radius: 5px;
  background-color: navy;
}

.tab-buttons:hover {
  color: black;
  text-decoration: underline;
  font-size: 30px;
  background-color: #1752b9;
  padding: 8;
  margin: 12px;
}

.tab-buttons.active {
  color: white;
  text-decoration: underline;
  font-size: 30px;
  background-color: #c50;
  margin: 16px;
  padding: 14px;
}

.year-buttons {
  color: white;
  text-decoration: none;
  font-size: 30px;
  padding: 5px;
  border-radius: 5px;
  background-color: navy;
}

.year-buttons:hover {
  color: black;
  text-decoration: underline;
  font-size: 30px;
  background-color: #1752b9;
  padding: 8;
  margin: 12px;
}

.year-buttons.active {
  color: white;
  text-decoration: underline;
  font-size: 30px;
  background-color: #c50;
  margin: 12px;
  padding: 14px;
}

#info-text {
  border-radius: 10px;
  background-color: #002e62;
  width: 55%;
  margin: 7 auto;
  font-size: 24px;
  padding: 5px;
}

#written-by {
  margin: 0 auto;
  text-align: center;
}

.about-and-picture {
  border-radius: 10px;
  background-color: #002e62;
  padding: 10px;
  margin: 5px auto;
  width: 60%;
}

.about-and-picture img {
  max-width: 57%;
}

.about-and-picture p {
  margin: 0 auto;
  text-align: center;
}

img {
  border-radius: 10px;
  height: 500px;
}

